<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">MythDroid</string>
    <string name="settings">Settings</string>
    <string name="defFe">Default frontend</string>
    <string name="setCurFe">Set current frontend</string>
    <string name="curFe">Frontend: </string>
    <string name="none">None</string>
    <string name="noBe">No backends found</string>
    <string name="noBeDetail">Configure one manually in settings perhaps?</string>
    <string name="editFes">Edit frontends</string>
    <string name="addFe">Add a frontend</string>
    <string name="clickAddFe">Click here to add a new frontend</string>
    <string name="name">Name:</string>
    <string name="addr">Address:</string>
    <string name="macAddr">MAC Address:</string>
    <string name="noFes">No frontends are defined!</string>
    <string name="chFe">Choose frontend</string>
    <string name="noEncoders">No encoders</string>
    <string name="noScheduled">No scheduled recordings</string>
    <string name="noJobs">No jobs</string>
    <string name="recGroup">Recording group:</string>
    <string name="storGroup">Storage group:</string>
    <string name="matchDups">Match duplicates using:</string>
    <string name="lookDups">Look for duplicates in:</string>
    <string name="epiFilter">Episode filter:</string>
    <string name="recType">Recording type:</string>
    <string name="recPrio">Recording priority:</string>
    <string name="schedOpt">Scheduling Options</string>
    <string name="storage">Storage</string>
    <string name="groupOpt">Group Options</string>
    <string name="load">Load</string>
    <string name="guideData">Guide Data</string>
    <string name="scheduled">Scheduled</string>
    <string name="encoders">Encoders</string>
    <string name="jobs">Jobs</string>
    <string name="plot">Plot:</string>
    <string name="videos">Videos</string>
    <string name="play">Play</string>
    <string name="stopRec">Stop Rec</string> <!-- needs to be short to fit in a button -->
    <string name="schedule">Schedule</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="loading">Loading</string>
    <string name="chStartDate">Change Start Date</string>
    <string name="chStartTime">Change Start Time</string>
    <string name="shuffle">Shuffle Mode</string>
    <string name="repeat">Repeat Mode</string>
    <string name="visualiser">Toggle Visualiser</string>
    <string name="chVisual">Change Visualiser</string>
    <string name="plEdit">Playlist Editor</string>
    <string name="menu">Menu</string>
    <string name="osdMenu">OSD Menu</string>
    <string name="leaveRemote">Leave Remote</string>
    <string name="haltPlayback">Halt playback?</string>
    <string name="dispGuide">Display Guide</string>
    <string name="remote">Remote</string>
    <string name="btnIface">Button Interface</string>
    <string name="gestIface">Gesture Interface</string>
    <string name="delRec">Delete recording</string>
    <string name="stopRecording">Stop recording</string>
    <string name="sure">Are you sure?</string>
    <string name="filterRec">Filter recordings</string>
    <string name="noRecs">No recordings!</string>
    <string name="refresh">Refresh</string>
    <string name="filter">Filter</string>
    <string name="resetFilter">Reset Filter</string>
    <string name="wakeFe">Wake Frontend</string>
    <string name="mddCmd">Run MDD command</string>
    <string name="mddCmds">MDD Commands</string>
    <string name="noMddCmds">No MDD commands are defined</string>
    <string name="streamQuality">Select stream quality</string>
    <string name="crash_notif_ticker_text">MythDroid has crashed, please send a report...</string>
    <string name="crash_notif_title">MythDroid has crashed...</string>
    <string name="crash_notif_text">Please click here to help fix the issue.</string>
    <string name="crash_dialog_title">MythDroid has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
        application to stop. Please help us fix this by sending us error data,
        all you have to do is click \'OK\'.</string>
    <string name="mcrash_dialog_text">An unexpected error occurred. You were running
        an unofficial copy of MythDroid with unknown modifications. Find the original,
        open source project at http://mythdroid.googlecode.com</string>   
</resources>
