<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:minWidth="260dp">
	
	<LinearLayout 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="5sp">
		
		<TextView 
			android:text="@string/name"
			android:textSize="20sp" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
		
		<EditText 
			android:text=""
			android:inputType="text"
			android:id="@+id/name" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:layout_marginTop="10dp"/>
		
		<TextView 
			android:text="@string/addr"
			android:textSize="20sp" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"/>
		
		<EditText 
			android:text=""
			android:inputType="text" 
			android:id="@+id/addr" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:layout_marginTop="10dp"/>
		
		<TextView 
			android:text="@string/macAddr"
			android:textSize="20sp" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"/>
		
		<EditText 
			android:text=""
			android:inputType="text" 
			android:id="@+id/hwaddr" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:layout_marginTop="10dp"/>
	</LinearLayout>
	
</ScrollView>