<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:orientation="vertical"
   	android:paddingLeft="4dp"
   	android:paddingRight="4dp">
   	
    <TextView
		android:id="@+id/title"
 		android:layout_width="fill_parent" 
 		android:layout_height="wrap_content"
 		android:paddingTop="8dp"
 		android:textSize="20sp"/>
 		
 	<TextView
		android:id="@+id/subtitle"
 		android:layout_width="fill_parent" 
 		android:layout_height="wrap_content"
 		android:layout_below="@id/title"
 		android:textSize="16sp"
 		android:textStyle="italic"/>
 		
 	<ImageView
		android:id="@+id/image"
		android:layout_width="wrap_content" 
 		android:layout_height="wrap_content"
 		android:layout_below="@id/subtitle"
		android:layout_centerHorizontal="true"
		android:adjustViewBounds="true"
		android:maxHeight="110dp"
		android:paddingTop="10dp"
		android:paddingBottom="10dp"/>
		
	<TextView	
		android:id="@+id/channel"
		android:layout_width="wrap_content" 
 		android:layout_height="wrap_content"
 		android:layout_below="@id/image"
 		android:layout_alignParentLeft="true"
 		android:textSize="17sp"/>
 		
	<TextView	
		android:id="@+id/start"
		android:layout_width="wrap_content" 
 		android:layout_height="wrap_content"
		android:layout_alignTop="@id/channel"
 		android:layout_alignParentRight="true"
		android:textSize="17sp"/>
		
	<TextView	
		android:id="@+id/category"
		android:layout_width="wrap_content" 
 		android:layout_height="wrap_content"
 		android:layout_below="@id/channel"
 		android:layout_alignParentLeft="true"
 		android:paddingTop="4dp"
 		android:textSize="15sp"/>
 		
	<TextView	
		android:id="@+id/status"
		android:layout_width="wrap_content" 
 		android:layout_height="wrap_content"
		android:layout_alignTop="@id/category"
 		android:layout_alignParentRight="true"
 		android:paddingTop="4dp"
		android:textSize="15sp"/>
		
	<LinearLayout
		android:id="@+id/buttons"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:gravity="center"
		android:paddingBottom="2dp"
		android:orientation="horizontal">
		
		<Button
 			android:id="@+id/play"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginRight="2dp"
 			android:minWidth="76dp"
			android:visibility="gone"
			android:textSize="14sp"
  			android:text="@string/play"/>
  			
 		<Button
 			android:id="@+id/stop"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:minWidth="76dp"
			android:visibility="gone"
			android:textSize="14sp"
 			android:text="@string/stopRec"/>
 			
 		<Button
 			android:id="@+id/edit"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginLeft="2dp"
 			android:minWidth="76dp"
 			android:textSize="14sp"
 			android:text="@string/schedule"/>
 			
		<Button
 			android:id="@+id/del"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:minWidth="76dp"
 			android:layout_marginLeft="2dp"
			android:visibility="gone"
			android:textSize="14sp"
 			android:text="@string/delete"/>
 			
 	</LinearLayout>
 	
 	<ScrollView 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@id/category"
		android:layout_above="@id/buttons"
		android:layout_alignWithParentIfMissing="true"
		android:paddingTop="6dp"
		android:paddingBottom="4dp"
		android:clipChildren="true">
		
		<TextView
			android:id="@+id/desc"
			android:layout_width="wrap_content" 
 			android:layout_height="wrap_content"
 			android:paddingRight="4dp"
			android:textSize="16sp"/>
			
	</ScrollView>
			
</RelativeLayout>